--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
-    "husky": "^8.0.3"
+    "husky": "^8.0.3",
+    "validate-branch-name": "^1.3.0"
   },
   "browserslist": {
     "production": [
@@ -46,8 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "husky": {
-    "configPath": ".huskyrc"
   }
 }
