--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "husky": "^8.0.3",
+    "jest": "^27.5.1",
     "validate-branch-name": "^1.3.0"
   },
   "browserslist": {
