--- a/ babel.config.json
+++ b/ babel.config.json
@@ -1,17 +1,17 @@
 {
-  "presets": [
+  "presets":
+  [
     [
-      "@babel/preset-env",
-      {"targets": {"node": "current"}}],
-      "@babel/preset-typescript",
-      {
-        "targets": {
-          "edge": "17",
-          "firefox": "60",
-          "chrome": "67",
-          "safari": "11.1"
-        }
+    "@babel/preset-env",
+    {"targets": {"node": "current"}}],
+    "@babel/preset-typescript",
+    {
+      "targets": {
+        "edge": "17",
+        "firefox": "60",
+        "chrome": "67",
+        "safari": "11.1"
       }
-    ]
+    }
   ]
 }
