--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "personal_webpage",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -20,8 +21,6 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -43,6 +42,8 @@
     "eslint-plugin-react": "^7.33.2",
     "husky": "^8.0.3",
     "jest": "^27.5.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2",
     "validate-branch-name": "^1.3.0"
   },
   "browserslist": {
